Permitir seleccionar un elemento a sincronizar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,12 +88,12 @@
         El producto ya ha sido selccionado. Ingrese otro</string>
 
     <string name="activity_sync_items">Sincronizar</string>
-    <string name="activity_sync_no_check_items">Seleccione el item a sincronizar</string>
+    <string name="activity_sync_no_check_items">Seleccione un item a sincronizar</string>
     <string name="activity_sync_no_found_file">No se encontro el archivo a sincronizar
     en el telefono</string>
     <string name="activity_sync_no_read_line">Ocurrio un error al intentar leer
     el archivo</string>
-    <string name="activity_sync_warning">Se sincronizaran los clientes y productos\n
+    <string name="activity_sync_warning">Se sincronizaran los items seleccionados\n
         ¿Esta seguro de continuar?</string>
     <string name="activity_sync_success">Se realizo la sincronizacion correctamente</string>
     <string name="order_row_cod_order">Cod.</string>
