--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Venta Broster</string>
+    <string name="app_name">Ventas Online</string>
     <string name="nav_menu_cerrarVenta">Cerrar ventas</string>
     <string name="nav_menu_clientes">Clientes</string>
     <string name="nav_menu_parametros">Configuración</string>
