--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Ventas Online</string>
+    <string name="nav_menu_cerrarVenta">Close Sales</string>
+    <string name="nav_menu_parametros">Settings</string>
     <string name="nav_menu_sync">Sincronizar</string>
     <string name="nav_menu_clientes">Clientes</string>
     <string name="nav_menu_exportar">Exportar</string>
